[package]
name = "jelly-mem_access"
version = "0.1.5"
authors = ["Ryuz <ryufuchi@gmail.com>"]
edition = "2021"
repository = "https://github.com/ryuz/jelly/tree/master/rust/mem_access"
keywords = ["mmio", "uio", "udmabuf", "u-dma-buf"]
license = "MIT"

description = "Memory Mapped I/O access library"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std=["nix", "libc", "thiserror"]

[dependencies]
delegate = "0.6.1"
nix = { version ="0.23.0", optional = true }
libc = { version ="0.2.109", optional = true }
thiserror = { version = "1.0.30", optional = true }
