[package]
name = "jelly-mem_access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std=["uio", "fs2", "nix", "libc"]

[dependencies]
delegate = "0.6.1"
uio = { version = "0.2.0", optional = true }
fs2 = { version ="0.4.3", optional = true }
nix = { version ="0.23.0", optional = true }
libc = { version ="0.2.109", optional = true }