[package]
name = "jelly-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std=[]

[dependencies]
#jelly-mem_access = { versipn="0.1.6", default-features=false }
jelly-mem_access = { path = "../mem_access/", default-features=false }
delegate = "0.7.0"
