[package]
name = "jelly-rtos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pudding-pac = { git="https://github.com/ryuz/rust_rtos.git", rev = "c13dd9014f86e0e230f167007e8effd9d805ef3f" } 
pudding-pac = { git="https://github.com/ryuz/pudding-pac.git", branch = "work" }

[features]
default = []
reg64bit = []
ercd = []

[build-dependencies]
cc = "1.0.36"
