[package]
name = "kv260_rtos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rand = { version = "0.8.4", default_features = false, features = ["small_rng"] }
pudding-pac = { git="https://github.com/ryuz/pudding-pac.git", branch = "work" }
jelly-rtos = { path = "../../../../rust/rtos", default-features=false, features=[] }
libm = "*"

[build-dependencies]
cc = "1.0.36"
