[package]
name = "kv260_rtos_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pudding-pac = { version = "0.1.3", default-features=false} 
jelly-rtos = { path = "../../../../rust/rtos", default-features=false, features=["ercd"] }
libm = "*"

[build-dependencies]
cc = "1.0.36"
