[package]
name = "kv260_imx219"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

opencv = "0.66.0"

#i2cdev = "0.5.1"
#i2c = "0.1.0"
jelly-mem_access = {path = "../../../../rust/mem_access" }
jelly-lib        = {path = "../../../../rust/lib" }
jelly-pac        = {path = "../../../../rust/pac" }
#nix = "0.25.0"
#libc = "0.2.132"

#delegate = "0.7.0"
#nix = { version ="0.25.0", optional = true }
#libc = { version ="0.2.109", optional = true }
#thiserror = { version = "1.0.30", optional = true }

