[package]
name = "kv260_imx219"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

opencv = "0.66.0"

jelly-mem_access = {path = "../../../../rust/mem_access" }
jelly-lib        = {path = "../../../../rust/lib" }
jelly-pac        = {path = "../../../../rust/pac" }
