[package]
name = "kv260_imx219"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

opencv = "0.93.5"

jelly-mem_access = "0.2.2"
#jelly-mem_access = { path = "../../../../../rust/mem_access" }
jelly-lib        = { path = "../../../../../rust/lib" }
jelly-pac        = { path = "../../../../../rust/pac" }
#jelly-pac = { git="https://github.com/ryuz/jelly-pac.git", rev="613c7ab680b29189dd3189bd3bf9c354b1a05999"}
