[package]
name = "kv260_imx219"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

opencv = "0.93.5"

jelly-mem_access = "0.2.2"
#jelly-mem_access = { path = "../../../../../rust/mem_access" }
#jelly-lib        = { path = "../../../../../rust/lib" }
jelly-lib         = { git = "https://github.com/ryuz/jelly-lib-rs.git", rev = "a719c9b" }
#jelly-pac        = { path = "../../../../../rust/pac" }
jelly-pac         = { git = "https://github.com/ryuz/jelly-pac-rs.git", rev = "6a62e64"}
