[package]
name = "ultra96v2_mpu9250_apu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.0"
#jelly-mem_access = "0.1.4"
jelly-mem_access = {path = "../../../../../rust/mem_access" }
jelly-pac = {path = "../../../../../rust/pac" }
