[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.0"
tokio = { version = "1.20.4", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.0"

[build-dependencies]
tonic-build = "0.12.0"

