[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.0"
tokio = { version = "1.38.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.0"

