[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
once_cell = "1.20.2"
#jelly-mem_access = {path = "../../../../../../rust/mem_access" }
jelly-mem_access = "0.2.0"
jelly-lib        = {path = "../../../../../../rust/lib" }
jelly-pac        = {path = "../../../../../../rust/pac" }

[build-dependencies]
tonic-build = "0.12.3"
