[package]
name = "rtcl_p3s7_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.21.3"
#jelly-mem_access = {path = "../../../../../../rust/mem_access" }
jelly-mem_access = "0.2.5"
jelly-lib        = {path = "../../../../../../rust/lib" }
jelly-pac        = {path = "../../../../../../rust/pac" }

[build-dependencies]
tonic-prost-build = "*"
